--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=SchoolHub
+
+#Actuator
 management.endpoints.web.exposure.include=health
+
+#Database
 spring.datasource.url=jdbc:sqlserver://schoolhub-dbserver.database.windows.net:1433;database=schoolhub-db;user=blessedbits_dbadmin@schoolhub-dbserver;password=pgadminbb78_;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -7,7 +11,7 @@ spring.jpa.show-sql=true
 # Java mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=schoolhub.educ.platfrom@gmail.com
+spring.mail.username=schoolhub.educ.platform@gmail.com
 spring.mail.password=tiol zscw mhyv skrn
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
