--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=SchoolHub
 
-#Actuator
+# Actuator
 management.endpoints.web.exposure.include=health
 
-#Database
+# Database
 spring.datasource.url=jdbc:sqlserver://schoolhub-dbserver.database.windows.net:1433;database=schoolhub-db;user=blessedbits_dbadmin@schoolhub-dbserver;password=pgadminbb78_;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -17,3 +17,6 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# Cloud storage
+CLOUDINARY_URL=cloudinary://212448221262698:9AVo8_GitlCDKtXYOIMQUp25-Xg@dhps6qiwu
