--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ management.endpoints.web.exposure.include=health
 spring.datasource.url=jdbc:sqlserver://schoolhub-dbserver.database.windows.net:1433;database=schoolhub-db;user=blessedbits_dbadmin@schoolhub-dbserver;password=pgadminbb78_;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # Java mail
 spring.mail.host=smtp.gmail.com
